--- a/index.html
+++ b/index.html
@@ -2,5 +2,17 @@
 <html>
     <head>
         <title>Parallax Scroll Website | Vaniila Javascript</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
+    <body>
+        <header>
+            <a href="#" class="logo">Logo</a>
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </header>
+    </body>
 </html>
