--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </header>
+        <section>
+            <img src="assets/stars.png" id="stars">
+            <img src="assets/moon.png" id="moon">
+            <img src="assets/mountains_behind.png" id="mountains_behind">
+            <h2 id="text">Moon Light</h2>
+            <img src="assets/mountains_front.png" id="mountains_front">
+        </section>
     </body>
 </html>
